metrics/network-policy-monitoring-allow-egress-alloy-loki.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: monitoring-allow-egress-alloy-loki
  namespace: monitoring
spec:
  podSelector:
    matchLabels:
      app: alloy
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: loki
      ports:
        - protocol: TCP
          port: 80
